app/assets/stylesheets/dashboard.css.scss
li.include .fa-times {
	color: #ddd;
}
li.include .fa-check {
	color: #060;
}
li.exclude .fa-times {
	color: #600;
}
li.exclude .fa-check {
	color: #ddd;
}
li.exclude ol {
	display: none;
}
.depth-1 {
	padding-left: 25px;
	background: #ddd;
	font-size: 1.5em;
}
.depth-2 {
	background: #eee;
	padding-left: 50px;
	font-size: 1.25em;
}
.depth-3 {
	padding-left: 75px;
}
.btn.active {
	background: #0081c2;
	color: #fff;
	text-shadow: none;
}
.btn.activeToggle {
	background: #0081c2;
	color: #fff;
	text-shadow: none;
}
.badge {
	margin: 0 2px;
}
#count {
	list-style-type: none;
	margin: 5px;
	min-height: 25px;
	text-align: center;
}
#count a {
	width: 200px;
}
.enrollment-count {
	min-width: 30px;
	display: inline-block;
}
.department {
	clear: both;
	margin-top: 5px;
	min-height: 100px;
}
.department li {
	padding: 0 10px;
}
h1 {
	margin: 20px 0;
	text-shadow: 0px 2px 2px #000;
}
h2 {
	padding: 10px;
	border-bottom: 1px solid #ccc;
	margin-bottom: 20px;
}
.courses h2 {
	border-bottom: none;
	padding: 0;
}
.li i {
	margin-right: 5px;
}
.courses .fa-check-circle, #generateProcess .completed, .include .icon-ok {
	color: #468847;
}
.exclude .icon-ok, .include .icon-remove, .undecided i {
	color: #c2c2c2;
}
#generateProcess .active {
	font-weight: bold;
}
#generateProcess .pending {
	color: #8d8d8d;
}
.heading {
	background: #0f2439;
	box-shadow: 0px 2px 2px #9c9c9c;
	color: #fff;
	margin-bottom: 20px;
}
.hover {
	background: #ffffae;
	border-radius: 10px;
}
.icon-user.noInstructor {
	color: #c2c2c2;
}
.instructorIcon {
	color: #4072a3;
}
.instructorIcon:hover {
	text-decoration: none;
}
.key {
	font-size: 12px;
	margin-top: 14px;
}
.key i {
	font-size: 14px;
	margin-right: 5px;
}
.courses .fa-question-circle, .exclude .icon-remove {
	color: #b94a48;
}
.not-using-canvas, i.fa-times-circle {
	color: #9e9e9e;
}
.courses ul ul {
	list-style-type: none;
	column-count: 3;
	-moz-column-count: 3;
	-webkit-column-count: 3;
}
.screenreader-only {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}
select, .btn {
	margin-bottom: 5px;
}
select {
	width: auto;
}
.topLink {
	color: #fff;
	float: right;
	font-size: 16px;
	margin-right: 10px;
}
footer .logo img {
	max-width: 300px;
	max-height: 110px;
}
@media (max-width: 767px) {
	body {
		padding-left: 0;
		padding-right: 0;
	}
	.container-fluid {
		padding-left: 20px;
		padding-right: 20px;
	}
}

@media (max-width: 1024px) {
	.courses ul ul {
		column-count: auto;
		-moz-column-count: auto;
		-webkit-column-count: auto;
	}
}

@media (max-width: 1420px) {
	.courses ul ul {
		column-count: 2;
		-moz-column-count: 2;
		-webkit-column-count: 2;
	}
}

@media (max-width: 1920px) {
	.courses ul ul {
		column-count: 4;
		-moz-column-count: 4;
		-webkit-column-count: 4;
	}
}


.container { width: auto !important; }

.heading {
	.navbar-nav {
		margin: 15px;
	}
}

